--- a/google-homepage.css
+++ b/google-homepage.css
@@ -1,8 +1,41 @@
 * {
-	border: 1px solid grey;
+	border: 1px solid #C9C9C9;
 }
 
-img {
+.image {
 	display: block;
 	margin: auto;
+	margin-top: 130px;
+}
+
+
+
+.search {
+	margin: auto;
+	width: 90%;
+	margin-top: 50px;
+}
+
+.searchbar {
+	display: block;
+	margin: auto;
+	width: 500px;
+	margin-top: 50px;
+	padding-top: 25px;
+	border-radius: 3px;
+	box-shadow: 0px 3px 5px #888888;
+}
+
+.googlesearch {
+	display: block;
+	margin: auto;
+}
+
+.lucky {
+	display: block;
+	margin: auto;
+}
+
+.footer {
+	margin-top: 100%;
 }
