--- a/google-homepage.css
+++ b/google-homepage.css
@@ -1,7 +1,3 @@
- {
-	border: thin solid #C9C9C9;
-}
-
 ul {
 	list-style-type: none;
 	margin: 0;
@@ -20,8 +16,17 @@ ul {
 	background-color: #4486F9;
 	color: white;
 	border-radius: 1px;
-	padding: 7px 13px;
+	padding: 7px 14px;
 	font-weight: 600;
+}
+
+.googleapps {
+	background-image: url(http://icon-icons.com/icons2/933/PNG/512/show-apps-button_icon-icons.com_72551.png);
+	display: block;
+	width: 1px;
+	height: 1px;
+	margin: 7px 22px 0px 18px;
+	background-size: contain;
 }
 
 a {
@@ -46,9 +51,6 @@ a {
 	display: block;
 	margin: auto;
 	margin-top: 180px;
-}
-
-
 }
 
 .searchbarbox {
@@ -109,6 +111,10 @@ a {
 .footerbuttons {
 	margin-right: 20px;
 	margin-left: 20px;
+}
+
+.footerbuttons li {
+	padding: 0px 8px 0px 8px;
 }
 
 .footer .l {
